--- a/LojaRazor/Views/Shared/_Layout.cshtml
+++ b/LojaRazor/Views/Shared/_Layout.cshtml
@@ -6,35 +6,8 @@
     <link href="~/Content/Style.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container-fluid">
-                @Html.ActionLink("Loja Razor", "Index", "Home", null, new { @class = "brand" })
-                <ul class="nav">
-                    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contato", "Home")</li>
-                </ul>
-                <p class="navbar-text pull-right">
-                    @if (Session["usuarioLogado"] != null)
-                    {
-                        @: Bem-Vindo
-                        @Session["usuarioLogado"]
-                        @Html.ActionLink("Logout", "Logout", "Autenticacao")
-                    }
-                    else
-                    {
-                        @: Olá Visitante,
-                        @Html.ActionLink("Login", "Index", "Autenticacao")
-                        @: ou
-                        @Html.ActionLink("Cadastre-se", "Form", "Usuarios")
+    @Html.Partial("_MenuSuperior")
 
-                    }
-                </p>
-            </div>
-
-        </div>
-
-    </div>
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span3">
@@ -45,5 +18,6 @@
             </div>
         </div>
     </div>
+    @RenderSection("Scripts", false)
 </body>
 </html>
