Adição de internacionalização

--- a/LojaRazor/Views/Shared/_MenuSuperior.cshtml
+++ b/LojaRazor/Views/Shared/_MenuSuperior.cshtml
@@ -1,24 +1,26 @@
-﻿<div class="navbar navbar-fixed-top">
+﻿@using LojaRazor.Internacionalizacao
+
+<div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container-fluid">
             @Html.ActionLink("Loja Razor", "Index", "Home", null, new { @class = "brand" })
             <ul class="nav">
-                <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                <li>@Html.ActionLink("Contato", "Contato", "Home")</li>
+                <li>@Html.ActionLink(Mensagens.Sobre, "About", "Home")</li>
+                <li>@Html.ActionLink(Mensagens.Contato, "Contato", "Home")</li>
             </ul>
             <p class="navbar-text pull-right">
                 @if (Session["usuarioLogado"] != null)
                 {
                     @: Bem-Vindo
                     @Session["usuarioLogado"]
-                    @Html.ActionLink("Logout", "Logout", "Autenticacao")
+                    @Html.ActionLink(Mensagens.Logout, "Logout", "Autenticacao")
                 }
                 else
                 {
-                    @: Olá Visitante,
-                    @Html.ActionLink("Login", "Index", "Autenticacao")
+                    @: @Mensagens.OlaVisitante
+                    @Html.ActionLink(Mensagens.Login, "Index", "Autenticacao")
                     @: ou
-                    @Html.ActionLink("Cadastre-se", "Form", "Usuarios")
+                    @Html.ActionLink(Mensagens.CadastreSe, "Form", "Usuarios")
 
                 }
             </p>
