Otimizando Views através do método BundleConfig

--- a/LojaRazor/Views/Autenticacao/Index.cshtml
+++ b/LojaRazor/Views/Autenticacao/Index.cshtml
@@ -25,6 +25,5 @@
 </div>
 
 @section Scripts{
-    <script resource="~/Scripts/jquery-1.7.1.js"></script>
-    <script resource="~/Scripts/jquery.validade.js"></script>
+    @Scripts.Render("~/Bundles/scripts")
 }
