--- a/LojaRazor/Views/Shared/_Layout.cshtml
+++ b/LojaRazor/Views/Shared/_Layout.cshtml
@@ -2,8 +2,7 @@
 
 <html>
 <head>
-    <link href="~/Content/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/Style.css" rel="stylesheet" />
+    @Styles.Render("~/bundles/estilos")
 </head>
 <body>
     @Html.Partial("_MenuSuperior")
